Fix Contact layout mess when typing on mobile

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -4,6 +4,6 @@ body {
 
 #container {
   background-color: #1B1F24;
-  height: 100vh;
+  height: 100%;
 }
 
